--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.jvmargs=-Xmx1G
 minecraft_version=1.21.1
 loader_version=0.16.14
 # Mod Properties
-mod_version=2.9.4-18.06.2025-bugfix-and-new
+mod_version=2.9.5-19.06.2025-entitiy-renderer-item-tab
 maven_group=com.kaplandev
 archives_base_name=mobpvp
 # Dependencies
