--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.jvmargs=-Xmx1G
 minecraft_version=1.21.1
 loader_version=0.16.14
 # Mod Properties
-mod_version=2.9.7-256.06.2025-buff-egg
+mod_version=2.9.8-26.06.2025-egg
 maven_group=com.kaplandev
 archives_base_name=mobpvp
 # Dependencies
