--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.jvmargs=-Xmx1G
 minecraft_version=1.21.1
 loader_version=0.16.14
 # Mod Properties
-mod_version=2.9.9-27.06.2025-s
+mod_version=3.0.0-27.06.2025-BOSS
 maven_group=com.kaplandev
 archives_base_name=mobpvp
 # Dependencies
