--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.jvmargs=-Xmx1G
 minecraft_version=1.21.1
 loader_version=0.16.14
 # Mod Properties
-mod_version=3.0.2-30.06.2025-big-buff-code
+mod_version=3.0.4-02.07.2025-BETA+3
 maven_group=com.kaplandev
 archives_base_name=mobpvp
 # Dependencies
