--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+import net.fabricmc.loom.task.RemapJarTask
 plugins {
     id 'fabric-loom' version '1.10-SNAPSHOT'
     id 'maven-publish'
@@ -70,6 +71,22 @@ tasks.withType(JavaCompile).configureEach {
         it.options.release.set(targetJavaVersion)
     }
 }
+
+task generateTinyMappings(type: Jar) {
+    group = "build"
+    description = "Generate the mapping .jar file for mod developers."
+
+    archiveClassifier.set("mappings")
+    from {
+        def mappings = file("build/mappings")
+        if (mappings.exists()) {
+            return mappings
+        } else {
+            throw new GradleException("Mappings folder not found. Run a build first.")
+        }
+    }
+}
+
 
 java {
     def javaVersion = JavaVersion.toVersion(targetJavaVersion)
