--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.jvmargs=-Xmx1G
 minecraft_version=1.21.1
 loader_version=0.16.14
 # Mod Properties
-mod_version=3.1.3-29.07.2025-repo-update-2
+mod_version=25w31d4+v3.1.4
 maven_group=com.kaplandev
 archives_base_name=mobpvp
 # Dependencies
