--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
+# IntelliJ IDEA
+.idea/
+*.iml
+
+# Gradle
 .gradle/
+build/
+out/
+
+# Logs
+logs/
+*.log
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Temporary
+*.tmp
+*.bak
+
+# Minecraft Fabric dev stuff
+remappedSrc/
+classes/
